# LAPACK95

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
builddir/: build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: lapack.pc  lapack95.pc  sanitycheckf
builddir/meson-uninstalled/: lapack-uninstalled.pc  lapack95-uninstalled.pc
src/: CMakeLists.txt
subprojects/: lapack.wrap
